src/test/deca/context/invalid/sans_objet/assign_type_problem_01.deca
// Description:
//     Assignation avec une valeur de mauvais type.
//
// Resultats:
//    Ligne 12: Assign Type problem
//
// Historique:
//    cree le 01/01/2023

{
   int x;
   x = true;
}
